[package]
name = "multiview-overlay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
arc-swap = "1.9.1"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
serde_json = { workspace = true }

[features]
"default" = []
# Native libass burn-in rasterizer. Off by default: the default build is pure
# Rust with no native dependency. Enabling this adds the libass/HarfBuzz/FriBidi
# C toolchain (ADR-R007) and is wired up by downstream crates, not here.
"libass" = []

[lints]
workspace = true
