[package]
name = "multiview-preview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
multiview-engine = { workspace = true }
multiview-events = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
# HMAC-SHA256 for short-lived signed preview access tokens. RustCrypto, pinned;
# hmac/sha2/digest/crypto-common are MIT OR Apache-2.0 (cargo-deny allowlisted).
hmac = "0.12.1"
sha2 = "0.10.9"
# Pure-Rust baseline JPEG encoder for the default (GPU-free) preview build. Pinned
# EXACTLY to 0.6.0: that single release is licensed `MIT OR Apache-2.0` (cargo-deny
# allowlisted) and, with the `simd` feature OFF (we never enable it), the crate is
# itself `forbid(unsafe_code)` and dependency-free. Both 0.6.1 and the 0.7 line add
# an extra `IJG` license term that is NOT in our allowlist and would fail
# `cargo deny`, so we deliberately do not float to them.
jpeg-encoder = { version = "=0.6.0", default-features = false, features = ["std"] }
# NOTE: this crate no longer depends on `str0m`. The native ICE/DTLS/SRTP WHEP
# transport relocated to `multiview-webrtc` (ADR-0048 / ADR-P006 move 1) — exactly
# one str0m owner per process. `multiview-preview` keeps only the pure, socket-free
# `webrtc`-feature seam (SDP offer/answer, codec selection, the `WhepTransport`
# trait, the session lifecycle, and the bounded drop-oldest `SampleFeed`), so the
# default and `webrtc`-only builds stay pure-Rust and deny-clean.

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
# Decoder used ONLY in tests to prove the bytes we emit are a real, decodable JPEG
# of the expected geometry and colour — never linked into the shipped crate.
zune-jpeg = { version = "0.4", default-features = false }

[features]
"default" = []
# Off-by-default: the WHEP/WebRTC focus surface. The default build is pure-Rust
# (MJPEG/snapshot model + tokens only). Enabling `webrtc` turns on the WHEP
# offer/answer + preview-encoder selection AND the transport *seam*
# (`whep::transport`): the `WhepTransport` trait, the session lifecycle state
# machine, the transport-supplied SDP answer attributes, and the bounded
# drop-oldest sample feed. The seam is socket-free and pulls NO native dep, so
# the gated build stays green and deny-clean; a native (str0m) ICE/DTLS/SRTP
# implementation of the seam lands behind a *further* gate (it needs UDP/STUN +
# DTLS certificates). The native (str0m) implementation of this seam lives in
# the `multiview-webrtc` crate behind ITS `native` feature (ADR-0048 / ADR-P006);
# `multiview-preview` no longer carries a `webrtc-native` feature or a `str0m` dep.
"webrtc" = []

[lints]
workspace = true
